...
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialog_content_area_padding"
    android:paddingStart="@dimen/dialog_content_area_padding"
    android:paddingTop="@dimen/dialog_content_area_padding_top">

         <TextView
             android:id="@+id/import_conflicting_variables"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/import_conflicting_variables"
             android:layout_marginBottom="@dimen/material_design_spacing_large"/>

         <TextView
...
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/import_conflicting_variables_reason"
             android:layout_marginBottom="@dimen/material_design_spacing_large"/>

         <TextView
             android:id="@+id/conflicting_variables"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
             android:paddingLeft="24pt"
             android:paddingRight="24pt"
             android:paddingTop="14pt"
...
