...

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_new_scene_local_projects"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_scene_local_projects"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_library_add" />

...
