...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/DeviceTextView"
        android:id="@+id/title_paired_devices"
        android:layout_marginTop="@dimen/device_text_view_margin_top"
        android:text="@string/title_paired_devices"
        android:visibility="gone" />

    <View
        android:layout_width="fill_parent"
...
        android:layout_weight="1" />

    <TextView
        style="@style/DeviceTextView"
        android:id="@+id/title_new_devices"
        android:layout_marginTop="@dimen/device_text_view_margin_top"
        android:text="@string/title_other_devices"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/device_list_progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
